--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,5 +4,21 @@
     "config:base"
   ],
   "enabledManagers": ["terraform"],
-  "recreateWhen": "always"
+  "recreateWhen": "always",
+  "packageRules": [
+    {
+      "description": "Group Minor/Patch updates for core and providers into a single PR",
+      "matchUpdateTypes": ["patch", "minor"],
+      "groupName": "All Minor/Patch Updates",
+      "automerge": true,
+      "automergeType": "branch-push"
+    },
+    {
+      "description": "Force AzureRM Patch updates to lag by one version (N-1 or older)",
+      "matchPackageNames": ["hashicorp/azurerm"],
+      "matchUpdateTypes": ["patch"],
+      "versionSelection": "non-latest",
+      "groupName": "AzureRM Stable Patches (N-1)"
+    }
+  ]
 }
