--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -17,7 +17,7 @@
       "description": "Force AzureRM Patch updates to lag by one version (N-1 or older)",
       "matchPackageNames": ["hashicorp/azurerm"],
       "matchUpdateTypes": ["patch"],
-      "versionSelection": "non-latest",
+      "allowedVersions": "/^(?!\\Q{{latestVersion}}\\E$).*$/",
       "groupName": "AzureRM Stable Patches (N-1)"
     }
   ]
